fix: make sure headline press item logo doesn't overflow container

--- a/components/Press/PressHero/PressHero.module.css
+++ b/components/Press/PressHero/PressHero.module.css
@@ -16,7 +16,7 @@
 }
 
 .mainArticleLogo {
-  width: 240px;
+  width: 100%;
 }
 
 .asSeenInContainer {
